feat: Add get/search/filter service integration tests